Add TeamResource
